# multithreaded-runtime

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
cmake/: clang-toolchain.cmake
include/: debug.h  fifo_scheduler.h  processor.h  scheduler.h  settings.h  task.h  thread_pool.h  work.h  workload.h
scripts/: build.sh  build_remote.sh  run.sh  run_remote.sh  sync.sh
src/: fifo_scheduler.cpp  processor.cpp  runtime.cpp  scheduler.cpp  task.cpp  thread_pool.cpp  workload.cpp
